alambert    2005/11/05 23:21:07 UTC	(20051105-3501)
  Log:
  authcookie_destroy(): remove extra free

  Changes:	Modified:
  +0 -1		trunk/src/authcookie.c (File Modified) 


alambert    2005/11/05 23:09:17 UTC	(20051105-3499)
  Log:
  authcookie_validate(): don't take the first cookie matching myuser; take the first that works.

  Changes:	Modified:
  +2 -2		trunk/src/authcookie.c (File Modified) 


pfish       2005/11/05 23:09:01 UTC	(20051105-3497)
  Log:
  OperServ AKILL: Oops, remove comment.
  

  Changes:	Modified:
  +0 -1		trunk/modules/operserv/akill.c (File Modified) 


pfish       2005/11/05 23:07:34 UTC	(20051105-3495)
  Log:
  OperServ AKILL: Check if target is a internal client.
  

  Changes:	Modified:
  +3 -0		trunk/modules/operserv/akill.c (File Modified) 


alambert    2005/11/05 23:06:49 UTC	(20051105-3493)
  Log:
  uplink_delete(): remember to node_free()

  Changes:	Modified:
  +1 -0		trunk/src/node.c (File Modified) 


alambert    2005/11/05 23:04:55 UTC	(20051105-3491)
  Log:
  OS NOOP: remember to node_free() and BlockHeapFree()

  Changes:	Modified:
  +4 -0		trunk/modules/operserv/noop.c (File Modified) 


pfish       2005/11/05 21:39:15 UTC	(20051105-3489)
  Log:
  Clean up the AKILL code that w00t converted to fcommands.
  This should work now..
  

  Changes:	Modified:
  +18 -19	trunk/modules/operserv/akill.c (File Modified) 


w00t        2005/11/05 15:03:55 UTC	(20051105-3487)
  Log:
  Note to self: Update this.

  Changes:	Modified:
  +2 -0		trunk/doc/example_module.c (File Modified) 


alambert    2005/11/05 09:46:05 UTC	(20051105-3485)
  Log:
  CS INVITE: now, you can only invite yourself. Fixes spamming abuse issue.

  Changes:	Modified:
  +1 -5		trunk/help/cservice/invite (File Modified) 


alambert    2005/11/05 09:45:42 UTC	(20051105-3483)
  Log:
  CS INVITE: now, you can only invite yourself. Fixes spamming abuse issue.

  Changes:	Modified:
  +4 -17	trunk/modules/chanserv/invite.c (File Modified) 

