@@ -1,3 +1,12 @@
+alambert    2005/11/05 23:25:35 UTC	(20051105-3503)
+  Log:
+  XMLRPC: library errors are now < 0; our errors >= 0
+
+  Changes:	Modified:
+  +8 -8		trunk/doc/XMLRPC (File Modified) 
+  +8 -8		trunk/src/xmlrpc.c (File Modified) 
+
+
 alambert    2005/11/05 23:21:07 UTC	(20051105-3501)
   Log:
   authcookie_destroy(): remove extra free
